Implement comment controller and update comment service